3. Liquibase. Интеграционные тесты. [#95881 #315996] v.03